{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 219,
  "lineage": "2ea64840-2ab9-7d88-b127-a324bbe3c3de",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
                "ip_addresses": [],
                "name": "app-gateway-backends"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/mainnet-http-settings",
                "name": "mainnet-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 5000,
                "probe_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/probes/health-probe",
                "probe_name": "health-probe",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/testnet-http-settings",
                "name": "testnet-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 5001,
                "probe_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/probes/health-probe",
                "probe_name": "health-probe",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/app-gateway-feip",
                "name": "app-gateway-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/publicIPAddresses/app-gateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/app-gateway-feport",
                "name": "app-gateway-feport",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/gatewayIPConfigurations/gateway-ip-configuration",
                "name": "gateway-ip-configuration",
                "subnet_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-frontend"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/app-gateway-feip",
                "frontend_ip_configuration_name": "app-gateway-feip",
                "frontend_port_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/app-gateway-feport",
                "frontend_port_name": "app-gateway-feport",
                "host_name": "mainnet.dev-api.ccdscan.io",
                "host_names": [],
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/mainnet-listener",
                "name": "mainnet-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/sslCertificates/ssl",
                "ssl_certificate_name": "ssl",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/app-gateway-feip",
                "frontend_ip_configuration_name": "app-gateway-feip",
                "frontend_port_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/app-gateway-feport",
                "frontend_port_name": "app-gateway-feport",
                "host_name": "staging-mainnet.dev-api.ccdscan.io",
                "host_names": [],
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/mainnet-staging-listener",
                "name": "mainnet-staging-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/sslCertificates/ssl",
                "ssl_certificate_name": "ssl",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/app-gateway-feip",
                "frontend_ip_configuration_name": "app-gateway-feip",
                "frontend_port_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/app-gateway-feport",
                "frontend_port_name": "app-gateway-feport",
                "host_name": "staging-testnet.dev-api.ccdscan.io",
                "host_names": [],
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/testnet-staging-listener",
                "name": "testnet-staging-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/sslCertificates/ssl",
                "ssl_certificate_name": "ssl",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendIPConfigurations/app-gateway-feip",
                "frontend_ip_configuration_name": "app-gateway-feip",
                "frontend_port_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/frontendPorts/app-gateway-feport",
                "frontend_port_name": "app-gateway-feport",
                "host_name": "testnet.dev-api.ccdscan.io",
                "host_names": [],
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/testnet-listener",
                "name": "testnet-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/sslCertificates/ssl",
                "ssl_certificate_name": "ssl",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway",
            "identity": [],
            "location": "northeurope",
            "name": "app-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/probes/health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "health-probe",
                "path": "/rest/health",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
                "backend_address_pool_name": "app-gateway-backends",
                "backend_http_settings_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/mainnet-http-settings",
                "backend_http_settings_name": "mainnet-http-settings",
                "http_listener_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/mainnet-listener",
                "http_listener_name": "mainnet-listener",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/requestRoutingRules/mainnet-redirect",
                "name": "mainnet-redirect",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
                "backend_address_pool_name": "app-gateway-backends",
                "backend_http_settings_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/mainnet-http-settings",
                "backend_http_settings_name": "mainnet-http-settings",
                "http_listener_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/mainnet-staging-listener",
                "http_listener_name": "mainnet-staging-listener",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/requestRoutingRules/mainnet-staging-redirect",
                "name": "mainnet-staging-redirect",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
                "backend_address_pool_name": "app-gateway-backends",
                "backend_http_settings_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/testnet-http-settings",
                "backend_http_settings_name": "testnet-http-settings",
                "http_listener_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/testnet-listener",
                "http_listener_name": "testnet-listener",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/requestRoutingRules/testnet-redirect",
                "name": "testnet-redirect",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
                "backend_address_pool_name": "app-gateway-backends",
                "backend_http_settings_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendHttpSettingsCollection/testnet-http-settings",
                "backend_http_settings_name": "testnet-http-settings",
                "http_listener_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/httpListeners/testnet-staging-listener",
                "http_listener_name": "testnet-staging-listener",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/requestRoutingRules/testnet-staging-redirect",
                "name": "testnet-staging-redirect",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "ccscan-env-dev",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIACAQMwgAYJKoZIhvcNAQcBoIAkgASCA+gwgDCABgkqhkiG9w0BBwGggCSABIID6DCCBWswggVnBgsqhkiG9w0BDAoBAqCCBPowggT2MCgGCiqGSIb3DQEMAQMwGgQUgO2P1fPDglYGUzpt8qRzEiNMFuECAgQABIIEyFuTEJJRs2eL1dwMs6V4YfW48gLAXqAxl5zqXeexDP64UTKxBaDZ0pZ5uSsGQwqeEaN7INncMjxk0qTxrJqUpnMcXGz6OdxLSN6EXJovHc3Rf4JVjEyyz3tptX+h1RfPbyI/gUXepnwwKRMjjL7PunRO7JCcOVHSZmbfS3YsBIZ140jnhnuPty5G4vhP2gZQuP7e1KGMBZfiEW/1O08s0EpQXTi063Y3GQacUFal8rzKCO/yThal0+QhxyR2EyjspQyhZjaezRPxs5e9mN5DkJulcQhAVz7vH1f4jfvS3txH0Op5sOPzfDf [...]
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/sslCertificates/ssl",
                "key_vault_secret_id": "",
                "name": "ssl",
                "password": "oak-monster-pie",
                "public_cert_data": "MIIFbwYJKoZIhvcNAQcCoIIFYDCCBVwCAQExADALBgkqhkiG9w0BBwGgggVEMIIFQDCCBCigAwIBAgISA4Emg9iu/UVpu10wBSmDwSxoMA0GCSqGSIb3DQEBCwUAMDIxCzAJBgNVBAYTAlVTMRYwFAYDVQQKEw1MZXQncyBFbmNyeXB0MQswCQYDVQQDEwJSMzAeFw0yMjA2MTMwODAxMzdaFw0yMjA5MTEwODAxMzZaMB0xGzAZBgNVBAMTEmRldi1hcGkuY2Nkc2Nhbi5pbzCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAIFrmJkKOMz1a7C4Ea+R7jh0VflUE72IiGhbM82EOLKC2WylPatTv//gu70vnTXW1bjDTQ9A7P8PaHZwc9hvIgQTzgUg7EIQ0MrpqjkAGncY0wpQMxnW5ZXbNfQUQdz3Ebyd/jlicPnh9Bp [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "dependencies": [
            "azurerm_public_ip.app-gw",
            "azurerm_resource_group.this",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.this",
            "data.azurerm_key_vault.ccscan",
            "data.azurerm_key_vault_secret.ssl-cert-data",
            "data.azurerm_key_vault_secret.ssl-cert-password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "edxcxo1uczcupikh324242nkeb.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipc-vm",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/publicIPAddresses/vm-nic-pip",
                "subnet_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-backend"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-99-6B-38",
            "name": "vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ccscan-env-dev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Compute/virtualMachines/vm"
          },
          "dependencies": [
            "azurerm_public_ip.vm",
            "azurerm_resource_group.this",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkInterfaces/vm-nic/ipConfigurations/ipc-vm|/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/applicationGateways/app-gateway/backendAddressPools/app-gateway-backends",
            "ip_configuration_name": "ipc-vm",
            "network_interface_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkInterfaces/vm-nic"
          },
          "dependencies": [
            "azurerm_application_gateway.this",
            "azurerm_network_interface.vm",
            "azurerm_public_ip.app-gw",
            "azurerm_public_ip.vm",
            "azurerm_resource_group.this",
            "azurerm_subnet.backend",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.this",
            "data.azurerm_key_vault.ccscan",
            "data.azurerm_key_vault_secret.ssl-cert-data",
            "data.azurerm_key_vault_secret.ssl-cert-password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkInterfaces/vm-nic|/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkSecurityGroups/vm-nic-nsg",
            "network_interface_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "network_security_group_id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkSecurityGroups/vm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm",
            "azurerm_network_security_group.this",
            "azurerm_public_ip.vm",
            "azurerm_resource_group.this",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/networkSecurityGroups/vm-nic-nsg",
            "location": "northeurope",
            "name": "vm-nic-nsg",
            "resource_group_name": "ccscan-env-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ccnode_mainnet_grpc",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10111",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ccnode_testnet_grpc",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "18888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ccnode_testnet_p2p",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http-mainnet",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5001",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http-testnet",
                "priority": 1008,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ccnode_mainnet_p2p",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "dev-ccdscan-api",
            "fqdn": "dev-ccdscan-api.northeurope.cloudapp.azure.com",
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/publicIPAddresses/app-gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.61.98.192",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "app-gateway-pip",
            "resource_group_name": "ccscan-env-dev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "dev-ccdscan-vm",
            "fqdn": "dev-ccdscan-vm.northeurope.cloudapp.azure.com",
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/publicIPAddresses/vm-nic-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.63.72.246",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm-nic-pip",
            "resource_group_name": "ccscan-env-dev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-backend",
            "name": "snet-backend",
            "resource_group_name": "ccscan-env-dev",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-frontend",
            "name": "snet-frontend",
            "resource_group_name": "ccscan-env-dev",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bb2bee20-1674-4745-a147-ef3dcf71aa21",
            "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "northeurope",
            "name": "vnet",
            "resource_group_name": "ccscan-env-dev",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-frontend",
                "name": "snet-frontend"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/353e8b06-f9df-482d-9834-0f7a6d733e46/resourceGroups/ccscan-env-dev/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-backend",
                "name": "snet-backend"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}